# hotspot-detection

./: CMakeLists.txt  README.md  grid.cpp  grid.h  main.cpp  movement.cpp  movement.h
